--- a/docs/modules/ROOT/pages/servlet/authorization/architecture.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/architecture.adoc
@@ -145,7 +145,7 @@ Many sites allow certain limited access under remember-me authentication, but re
 
 [[authz-authorization-managers]]
 ==== AuthorizationManagers
-There are also helpful static factories in {security-api-url}org/springframework/security/authorization/AuthorizationManagers.html[`AuthorizationManagers`] for composing individual ``AuthorizationManager``s into more sophisticated expressions.
+There are also helpful static factories in javadoc:org.springframework.security.authorization.AuthorizationManagers[] for composing individual ``AuthorizationManager``s into more sophisticated expressions.
 
 [[authz-custom-authorization-manager]]
 ==== Custom Authorization Managers
@@ -391,7 +391,7 @@ Many sites allow certain limited access under remember-me authentication but req
 
 When we have used the `IS_AUTHENTICATED_ANONYMOUSLY` attribute to grant anonymous access, this attribute was being processed by the `AuthenticatedVoter`.
 For more information, see
-{security-api-url}org/springframework/security/access/vote/AuthenticatedVoter.html[`AuthenticatedVoter`].
+javadoc:org.springframework.security.access.vote.AuthenticatedVoter[].
 
 
 [[authz-custom-voter]]
